# sleeper-mcp

./: .gitignore  .goosehints  README.md  TODO.md  get_test_data.py  pyproject.toml
docs/: openapi.yaml  sleeper_api_raw.html
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/mcp/: __init__.py  context.py  functions.py  handler.py  models.py
src/models/: __init__.py  core.py
src/services/: __init__.py  cache.py  sleeper.py
src/sleeper_mcp/: __init__.py  main.py
src/sleeper_mcp/sleeper_api/: __init__.py  client.py
src/sleeper_mcp/sleeper_api/models/: __init__.py  base.py
src/sleeper_mcp/sleeper_docs/: __init__.py  docs_fetcher.py
tests/: test_api.py  test_cache.py  test_client.py  test_context.py  test_main.py  test_mcp.py  test_sleeper_client.py
tests/integration/: test_integration.py  utils.py
tests/integration/data/: test_data.json
