[project]
name = "sleeper-mcp"
version = "0.1.0"
description = "A Machine Context Provider (MCP) server for integrating Sleeper fantasy sports data with Goose AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.4.2",
    "rich>=13.6.0",
    "structlog>=23.2.0",
    "diskcache>=5.6.3",
    "email-validator>=2.1.0.post1",
    "python-dateutil>=2.8.2",
    "cachecontrol>=0.13.1",
    "lockfile>=0.12.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.3",
    "respx>=0.20.2",
    "freezegun>=1.2.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = []
line-length = 88
